# MTRE-6100

./: .gitignore
Homework2/: bayes_filter.py
Homework3/: homework3.py
Homework4/: homework4.cpp
Homework4/deliverables/: CMakeLists.txt
Homework5/: CMakeLists.txt  homework5.cpp
Homework5/includes/: object_detection.cpp  object_detection.h  video_base.cpp  video_base.h
cpp/: lecture-9b.cpp  lecture-9d.cpp  lecture-9e.cpp  lecture9c.cpp
cpp/lecture10/: custom_classes.cpp  custom_classes.h  main_program.cpp  pure-virtual-functions.cpp
cpp/lecture9/: lecture-9a.cpp  lecture-9e.cpp  lecture9c.cpp
opencv-cpp/: CMakeLists.txt  Lecture8-Part1.cpp  Lecture8-Part2.cpp  Lecture8-Part3.cpp  Lecture8-Part4.cpp  Lecture8-Part5.cpp  Lecture8-Part6.cpp
opencv_py/: Lecture4.py  lecture4-a.py  lecture4-b.py  lecture4-c.py  lecture4-d.py  lecture4-j.py  lecture4-k.py
python_intro/: lecture3-2.py  lecture3-3.py  lecture3.py
